tests/core/snapshots/test-discriminator-invalid.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream(baseURL: "http://jsonplaceholder.typicode.com") {
  query: Query
}

union FooBar = Bar | Foo

type Bar {
  bar: String!
}

type Foo {
  foo: String!
}

type Nested {
  bar: FooBar
  foo: FooBar
}

type Query {
  foo: FooBar @http(path: "/foo")
}
