tests/core/snapshots/test-duplicated-link.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Duplicated id: placeholder1",
    "trace": [
      "schema",
      "@link",
      "1"
    ],
    "description": null
  },
  {
    "message": "Duplicated id: placeholder1",
    "trace": [
      "schema",
      "@link",
      "2"
    ],
    "description": null
  },
  {
    "message": "Duplicated id: placeholder2",
    "trace": [
      "schema",
      "@link",
      "3"
    ],
    "description": null
  },
  {
    "message": "Duplicated id: placeholder2",
    "trace": [
      "schema",
      "@link",
      "4"
    ],
    "description": null
  }
]
