tests/core/snapshots/test-empty-link.md_error.snap
---
source: tests/core/spec.rs
expression: errors
snapshot_kind: text
---
[
  {
    "message": "Link src cannot be empty",
    "trace": [
      "schema",
      "@link",
      "0"
    ],
    "description": null
  },
  {
    "message": "Link src cannot be empty",
    "trace": [
      "schema",
      "@link",
      "1"
    ],
    "description": null
  }
]
