tests/core/snapshots/test-enable-jit.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "id": 11,
          "user": {
            "name": "foo"
          }
        },
        {
          "id": 3,
          "user": {
            "name": "bar"
          }
        }
      ]
    }
  }
}
