tests/core/snapshots/test-enum-aliases.md_0.snap
---
source: tests/core/spec.rs
assertion_line: 200
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "internal: invalid item for enum \"Foo\"",
        "locations": [
          {
            "line": 1,
            "column": 9
          }
        ],
        "path": [
          "foo"
        ]
      }
    ]
  }
}
