tests/core/snapshots/test-enum-aliases.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
enum Foo {
  BAR
  BAZ
}

type Query {
  foo: Foo
}

schema {
  query: Query
}
