tests/core/snapshots/test-enum-as-argument.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server @upstream {
  query: Query
}

enum Test {
  A
  B
}

type Query {
  user(id: Int!, test: Test): User
    @http(
      url: "http://jsonplaceholder.typicode.com/users/{{.args.id}}"
      query: [{key: "enum", value: "{{.args.test}}"}]
    )
}

type User {
  id: Int!
  name: String!
}
