tests/core/snapshots/test-enum-default.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

type News {
  foo: Status
  id: Int
}

type NewsData {
  news: [News]
}

scalar PhoneNumber

type Query {
  news: NewsData!
}

enum Status {
  DRAFT
  NOT_DEFINED
  PUBLISHED
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
